<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_text_view">Title</string>
    <string name="crime_details_text_view">Details</string>
    <string name="crime_solved_check_box">Solved</string>
    <string name="date_picker_title">Pick date of crime</string>
    <string name="menu_add_crime">Add Crime</string>
    <string name="menu_show_subtitle">Show Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="menu_hide_subtitle">Hide Subtitle</string>
    <string name="menu_delete_crime">Delete Crime</string>
    <string name="crime_list_no_crimes_text_view">There are no crimes currently</string>
    <string name="crime_list_add_crime_button">Add Crime</string>
    <string name="crime_choose_suspect_button">Choose Suspect</string>
    <string name="crime_send_report_button">Send Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s.
    </string>
    <string name="crime_report_solved">The crime is solved</string>
    <string name="crime_report_unsolved">The crime is not yet solved</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_photo_view_content_description">crime photo view</string>
    <string name="crime_camera_button_content_description">camera button</string>
</resources>
